<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.figueroa.test1.ui.car.viewmodel.CarViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.car.CarFragment">

        <TextView
            android:id="@+id/car_name_text_view"
            android:textSize="32sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/big_gap"

            android:fontFamily="sans-serif-condensed"
            android:text="@{viewmodel.name}"
            tools:text="@string/car_name"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/car_brand_text_view"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-condensed"
            tools:text="@string/car_brand"
            android:text="@{viewmodel.brand}"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_name_text_view" />

        <TextView
            android:id="@+id/car_price_text_view"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textSize="32sp"
            android:text="@{viewmodel.price}"

            tools:text="@string/car_price"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/car_year_text_view"

            android:layout_width="28dp"
            android:layout_height="15dp"

            android:layout_marginTop="@dimen/medium_gap"

            android:fontFamily="sans-serif-condensed"
            tools:text="@string/car_year"
            android:text="@{viewmodel.year}"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_price_text_view" />

        <TextView
            android:id="@+id/car_description_text_view"

            android:layout_width="250dp"
            android:layout_height="70dp"

            android:layout_marginTop="@dimen/big_gap"

            android:fontFamily="sans-serif-condensed"
            tools:text="@string/car_description"
            android:text="@{viewmodel.description}"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_brand_text_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>